# drawmate

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  environment.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-wheels-manual.yml  build-wheels.yml  publish-testpypi.yml
builder/: arrow_builder.py  connection_builder.py  doc_builder.py  matrix_builder.py  mx_builder.py  node_builder.py  node_meta_builder.py  port_builder.py
constants/: constants.py  matrix_constants.py  node_constants.py
data/: output.drawio
data/templates/: builder-template-master.json  builder_template__2025-03-04T074122.drawio  builder_template__2025-03-04T080744.drawio  builder_template__2025-03-04T080921.drawio  builder_template__2025-03-04T081151.drawio  builder_template__2025-03-04T081236.drawio  builder_template__2025-03-04T081257.drawio  builder_template__2025-03-04T081508.drawio  builder_template__2025-03-04T081533.drawio  builder_template__2025-03-04T081657.drawio  builder_template__2025-03-04T084002.drawio  builder_template__2025-03-04T084107.drawio  builder_template__2025-03-04T084202.drawio  builder_template__2025-03-04T084306.drawio  builder_template__2025-03-04T084627.drawio  builder_template__2025-03-04T113649.drawio  builder_template__2025-03-04T113838.drawio  builder_template__2025-03-04T113949.drawio  builder_template__2025-03-04T114219.drawio  builder_template__2025-03-04T114449.drawio  builder_template__2025-03-04T114635.drawio  builder_template__2025-03-04T115009.drawio  builder_template__2025-03-04T115144.drawio  builder_template__2025-03-04T115208.drawio  builder_template__2025-03-04T115254.drawio  builder_template__2025-03-04T115349.drawio  builder_template__2025-03-04T115518.drawio  builder_template__2025-03-04T115558.drawio  builder_template__2025-03-05T064654.drawio  builder_template__2025-03-05T064852.drawio  builder_template__2025-03-05T064923.drawio  builder_template__2025-03-05T065140.drawio  builder_template__2025-03-05T065433.drawio  builder_template__2025-03-05T065448.drawio  builder_template__2025-03-05T065529.drawio  builder_template__2025-03-05T065617.drawio  builder_template__2025-03-05T065704.drawio  builder_template__2025-03-05T070018.drawio  builder_template__2025-03-05T070302.drawio  builder_template__2025-03-05T070414.drawio  (+18 more)
data/templates_archive/: five-levels-template.json  one-level-template.json  six-levels-template.json  three-levels-template.json
docs/: API.md  BUILD.md  template_builder_welcome.txt
docs/archive/: BUILD.md
drawmate_engine/: CMakeLists.txt  __init__.py  bindings.cpp  clean.sh  connection_labels.py  doc_builder.py  drawmate.py  drawmate_config.py  drawmate_master.py  drawmate_template_two.py  drawmatemc.py  drawmatesc.py  matrix.py  mx_factory.py  test_drawmatemc.py
drawmate_engine/archive/: drawmate.py  matrix.py
drawmate_engine/builder/: node_builder.py
drawmate_engine/include/: graph.h  graph_config.h  graph_exports.h  graph_object.h  keys.h  link.h  node.h  port.h
drawmate_engine/src/: graph.cpp  keys.cpp  link.cpp  node.cpp  port.cpp
drawmate_lib/: CMakeLists.txt  bindings.cpp  environment.yaml  pyproject.toml
drawmate_lib/include/: bindings.h  graph.h  label_node.h  link.h  node.h  port.h
drawmate_lib/src/: bindings.cpp  graph.cpp  graph_object.cpp  label_node.cpp  link.cpp  node.cpp  port.cpp
drawmate_renderer/: drawmate_config.py  drawmate_renderer.py  drawmatemc.py
engine/: CMakeLists.txt  TODO.md  bindings.cpp  environment.yaml
engine/drawmate_engine_test/: CMakeLists.txt
engine/drawmate_engine_test/include/: abstract_drawmate_node.h  anchor_grid_layout.h  drawmate_edge.h  drawmate_geometry.h  drawmate_graph.h  drawmate_multiport_nodes.h  drawmate_node_builder.h  drawmate_node_rect.h  drawmate_node_spec.h  drawmate_port_node.h  drawmate_shape.h
engine/drawmate_engine_test/include/drawmate_geometry/: drawmate_circle.h  drawmate_geometry.h  drawmate_rect.h  drawmate_triangle.h
engine/drawmate_engine_test/include/drawmate_node/: abstract_drawmate_node.h
engine/drawmate_engine_test/include/layout/: abstract_layout_manager.h  grid_counter.h
engine/drawmate_engine_test/src/: drawmate_graph.cpp  drawmate_node_builder.cpp  main.cpp
engine/include/: abstract_layout_manager.h  anchor_grid_layout.h  drawmate_edge.h  drawmate_geometry.h  drawmate_graph.h  drawmate_node.h  drawmate_port.h  drawmate_waypoint.h  graph.h  graph_config.h  graph_exports.h  grid_counter_pair.h  keys.h  link.h  port.h
engine/src/: drawmate_graph.cpp  graph.cpp  graph_object.cpp  keys_legacy.cpp  link.cpp
graph_objects/: appliance.py  arrow.py  connections.py  matrix.py  node.py  port.py  rect.py  text_box.py
layout_managers/: connection_manager.py  container_manager.py  default_layout.py  main.py  video_codec.py
logs/: doc_builder_logs.txt  drawmate_logs.txt
mx_graph_api/: mxarray.py  mxcell.py  mxgeometry.py  mxobject.py  mxpoint.py
scripts/: copy_libs.sh  drawmate_test.sh  test.sh  test_template_2025-06-04T12:29:07-2025-06-04T12:29:07.drawio
src/: doc_builder.py  drawmate_renderer.py  json2xml.py  main.py  mx_builder.py  mxcell.py  mxobject.py
src/drawmate/: __init__.py  __main__.py  _skbuild_project.toml  constants.py  doc_builder.py  drawmate_config.py  drawmate_graph.py  drawmate_grid_layout.py  drawmate_link.py  drawmate_linker.py  drawmate_matrix_builder.py  drawmate_node.py  drawmate_node_configurator.py  drawmate_port.py  drawmate_port_configurator.py  drawmate_renderer.py  drawmate_spacing_manager.py  id_utils.py  json2xml.py  log_manager.py  main.py  matrix_constants.py  mx_builder.py  mxarray.py  mxcell.py  mxgeometry.py  mxobject.py  mxpoint.py  pathfinder.py  template_builder.py  test.py
stubs/: drawmate_engine.pyi
test/: builder_test.py  import_test.py  matrix_builder_test.py  mc_test_1.drawio.xml  mc_test_1.json  mc_test_2.json  node_builder_test.py  test.py
test_templates/: mc_test_1.json  mc_test_2.json  mc_test_3.json  mc_test_4.json  mc_test_5.json  sc_test_1.json  xtp_crosspoint_6400.json
utils/: json2xml.py  log_manager.py  pathfinder.py
(+5 files in other folders)
