[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools"]
build-backend = "scikit_build_core.build"

[project]
name = "drawmate"
version = "1.2.0"
description = "Graph processing and visualization tools - automate draw.io diagrams"
readme = "README.md"
authors = [
  { name = "Aaron Newman", email = "aaron@landotech.net" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
drawmate = "drawmate.main:main"

[tool.scikit-build]
wheel.packages = ["src/drawmate"]
sdist.include = ["src", "engine", "README.md", "anchor.toml"]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
