[project]
name = "drawmate"
version = "2.0.0-beta"
description = "Graph processing and visualization tools - automate draw.io diagrams"
readme = "README.md"
authors = [
  { name = "Aaron Newman", email = "aaron@landotech.net" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
drawmate = "drawmate.main:main"

[tool.scikit-build]
wheel.packages = ["src/drawmate"]
sdist.include = ["src", "README.md", "anchor.toml"]
