[build-system]
requires = ["scikit_build_core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "drawmate"
version = "0.1.0"
description = "Python bindings for C++ drawmate backend"
authors = [{ name = "aaron newman", email = "aaron.newman@easyrok.com"}]
requires-python = ">=3.8"
